<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context="com.example.phone_eg.MainActivity">

    <TextView
        android:id="@+id/lastRingingTime_TextEdit"
        android:text="@string/lastRingingTimeNotRegisteredYet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/lastCallTime_TextEdit"
        android:text="@string/lastCallTimeNotRegisteredYet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/lastReceivedSmsBody_TextView"
        android:text="@string/lastReceivedSmsBodyNone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lastReceivedSmsOriginNumber_TextView"
        android:text="@string/lastReceivedSmsOriginNumberNone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/number_editText"
        android:hint="@string/number_hint"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/msg_editText"
        android:hint="@string/msg_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send_button"
        android:text="@string/send_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/call_button"
        android:text="@string/call_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
